--- a/.github/workflows/validate-ifc.yml
+++ b/.github/workflows/validate-ifc.yml
@@ -35,5 +35,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: ifc-validation-report
-          path:
-            validation_report.txt
+          path: ./validation_report.txt
