--- a/.github/workflows/validate-ifc.yml
+++ b/.github/workflows/validate-ifc.yml
@@ -1,4 +1,4 @@
-name: Validate IFC Files with IDS
+name: Validate IFC Files
 
 on:
   workflow_dispatch:  # Permite execução manual
@@ -6,37 +6,38 @@ on:
     branches:
       - main
   pull_request:
-    branches:
-      - main
 
 jobs:
   validate-ifc:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.9"
 
-      - name: Install Dependencies
-        run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install ifcopenshell lxml
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install ifcopenshell lxml pyproj  # Adicionando pyproj aqui
 
-      - name: Validate IFC Files
-        run: |
-          python3 ./validate_ifc_with_ids.py
+    - name: Run validation script
+      run: python ./validate_ifc_with_ids.py
 
-      - name: Upload Validation Reports as artifacts
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: ifc-validation-reports
-          path: |
-            validation_report.txt
-            validation_report.json
-            validation_report.csv
+    - name: List generated files
+      run: |
+        ls -l
+
+    - name: Upload Validation Reports as artifacts
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: ifc-validation-reports
+        path: |
+          ./validation_report.txt
+          ./validation_report.json
+          ./validation_report.csv
