--- a/.github/workflows/extract_quantities.yml
+++ b/.github/workflows/extract_quantities.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Run extraction script for all IFC files
         run: python extract_quantities.py
 
-      - name: Upload reports as artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: ifc-quantities-reports
-          path: ./*_quantities_report.*
+- name: Upload reports as artifacts
+  uses: actions/upload-artifact@v4
+  with:
+    name: IFC-Reports
+    path: "*.txt"
