--- a/.github/workflows/extract_quantities.yml
+++ b/.github/workflows/extract_quantities.yml
@@ -22,6 +22,13 @@ jobs:
       - name: Install dependencies
         run: pip install ifcopenshell
 
+      - name: Check for IFC files
+        run: |
+          if [ -z "$(ls *.ifc 2>/dev/null)" ]; then
+            echo "Nenhum arquivo IFC encontrado. Workflow será finalizado."
+            exit 1
+          fi
+
       - name: List IFC files
         run: ls -l *.ifc
 
